--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "libsodium-wrappers": "^0.7.9",
     "npm": "^7.24.1",
     "youtube-audio-stream": "^0.3.30",
-    "youtube-dl-exec": "^1.2.14",
+    "youtube-dl-exec": "^1.3.4",
     "yt-search": "^2.10.1",
-    "ytdl-core": "^4.9.1"
+    "ytdl-core": "^4.11.2",
+    "ytdl-core-discord": "^1.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
